Nav-bar width fix on mobile screen

--- a/animation.css
+++ b/animation.css
@@ -191,9 +191,9 @@
   }
   @media only screen and (max-width: 970px) {
     .anim-typewriter2 {
-      width: 12.5em;
+      width: 13.5em;
     }
     .anim-typewriter {
-      width: 9em;
+      width: 9.5em;
     }
   }
